@@ -1,5 +1,6 @@
 ---
 
+* [Bug 2625] Deprecate flag1 in local refclock.  Hal Murray, Harlan Stenn.
 * [Bug 2817] Stop locking ntpd into memory by default under Linux.  H.Stenn.
 * [Bug 2823] ntpsweep with recursive peers option doesn't work.  H.Stenn.
 * [Bug 2849] Systems with more than one default route may never
